...
                }, label: {
                    Text(isEditFlow ? (isEventSaved ? "Done" : "Cancel") : "Done")
                        .font(.nunitoBold( size: 14))
                        .padding(.vertical, 10)
                        .foregroundColor(Color(Asset.cancelText.name))
                })
                .accessibilityIdentifier(isEditFlow ? (isEventSaved ? "btn_event_detail_done" : "btn_event_detail_cancel") : "btn_event_detail_done")
                
                Spacer()
                
                Button(action: {
                    eventDetailScreenViewModel.editEvent(accountId: accountId, eventId: eventId, description: description, startDate: startDate, startTime: startTime, endDate: endDate, endTime: endTime, onSuccess: {
                        isEventSaved = true
...
                    .frame(width: eventDetailScreenViewModel.iseditEventInProgress ? 115 : 68, height: 32)
                    .background(
                        Color(hex: "SaveButtonBackground")
                    )
                    .clipShape(RoundedRectangle(cornerRadius: 5))
                })
                .accessibilityIdentifier("btn_save_event")
                .disabled(calculateDisablity())
                .opacity(isEditFlow ? ((accountId.isEmpty || eventId.isEmpty || description.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || !parameterChanged) ? 0.7 : 1) : 0)
            }
            .padding(.vertical)
            
            if eventDetailScreenViewModel.isFetchEventInProgress {
...
                        HStack(spacing: 0) {
                            Text(BasicHelper.getDateStringFromDate(from: startDate))
                                .foregroundColor(Color(Asset.termsPrimary.name))
                                .font(.nunitoBold( size: 12))
                                .tracking(0.5)
                                .padding(0)
                                .accessibilityIdentifier("txt_event_detail_start_date")
                            
                            Spacer()
                            
                            Image(Asset.emptyCalendar.name)
                                .frame(width: 15, height: 15)
                                .padding(.leading, 10)
...
                        HStack(spacing: 0) {
                            Text(BasicHelper.getTimeStringFromDate(from: startTime))
                                .foregroundColor(Color(Asset.termsPrimary.name))
                                .font(.nunitoBold( size: 12))
                                .tracking(0.5)
                                .padding(0)
                                .accessibilityIdentifier("txt_event_detail_start_time")
                            
                            Spacer()
                            
                            Image(Asset.clock.name)
                                .frame(width: 15, height: 15)
                                .padding(.leading, 10)
...
                        HStack(spacing: 0) {
                            Text(BasicHelper.getDateStringFromDate(from: endDate))
                                .foregroundColor(Color(Asset.termsPrimary.name))
                                .font(.nunitoBold( size: 12))
                                .tracking(0.5)
                                .padding(0)
                                .accessibilityIdentifier("txt_event_detail_end_date")
                            
                            Spacer()
                            
                            Image(Asset.emptyCalendar.name)
                                .frame(width: 15, height: 15)
                                .padding(.leading, 10)
...
                        HStack(spacing: 0) {
                            Text(BasicHelper.getTimeStringFromDate(from: endTime))
                                .foregroundColor(Color(Asset.termsPrimary.name))
                                .font(.nunitoBold( size: 12))
                                .tracking(0.5)
                                .padding(0)
                                .accessibilityIdentifier("txt_event_detail_end_time")
                            
                            Spacer()
                            
                            Image(Asset.clock.name)
                                .frame(width: 15, height: 15)
                                .padding(.leading, 10)
...
                ScrollView {
                    if isEditFlow {
                        TextField("Add Event", text: $description, axis: .vertical)
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .font(.nunitoSemiBold( size: 18))
                            .focused($focused)
                            .accessibilityIdentifier("et_edit_event")
                            .onTapGesture {
                                // Do nothing. Kept on tap here to override tap action over parent tap action
                            }
                            .padding(.top)
                            .lineLimit(4...)
                    } else {
                        Text(description)
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .font(.nunitoSemiBold( size: 18))
                            .accessibilityIdentifier("txt_create_event_description")
                            .padding(.top)
                            .frame(maxWidth: .infinity, alignment: .leading)
                    }
                }
            }
        }
...
