...
                    }
                    .frame(width: 40, height: 30, alignment: .bottomLeading)
                    .padding(.bottom, 10)
                    
                }
                )
                .accessibilityIdentifier("btn_account_detail_add_event")
            }
            
            if acccountDetailScreenViewModelObject.isEventListLoading {
                ProgressView()
                    .tint(Color(Asset.loginButtonSecondary.name))
            } else if acccountDetailScreenViewModelObject.eventData.event_ids.isEmpty {
...
                    HStack {
                        Spacer()
                        Text("Add events, set due dates and assign to your team")
                            .font(.nunitoRegular(size: 12))
                            .foregroundColor(Color(Asset.textPrimary.name))
                            .padding(EdgeInsets(top: 12, leading: 14, bottom: 12, trailing: 14))
                            .accessibilityIdentifier("txt_account_detail_add_event")
                        
                        Spacer()
                    }
                    .background(
                        RoundedRectangle(cornerRadius: 4)
                            .strokeBorder(style: StrokeStyle(lineWidth: 2, dash: [2, 5], dashPhase: 10))
...
